--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Centro de atención integral en Cafayate para la infancia y adolescencia." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="bg-[#FEFEFE] text-[#797476] font-sans antialiased">
